--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Step 3 Execute collection
         run: newman run ./viacep.json -e ./viacep_env.json --reporters cli, -r htmlextra --reporter-htmlextra-export ./results/
         
-      # Runs a set of commands using the runners shell
+      # #Runs a set of commands using the runners shell
       - name: Step 4 Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
